Refactoring using template to define the options

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import yaml\n",
+    "\n",
+    "with open(\"./template.yml\", 'r') as f:\n",
+    "    template = yaml.load(f, Loader=yaml.FullLoader)\n",
     "\n",
     "\n",
     "class Plot():\n",
@@ -15,13 +19,15 @@
     "        self.y = None\n",
     "        self.f = None\n",
     "        self.axs = None\n",
-    "        self.layout = None\n",
+    "        self.template = None\n",
     "\n",
-    "    def apply_layout(self):\n",
-    "        self.layout = [{\"background_color\": \"#c5eff7\",\n",
-    "                        \"grid_color\": '#aea8d3'}]\n",
-    "        self.f.patch.set_facecolor(\"#c5eff7\")\n",
-    "        self.axs.set_facecolor('#aea8d3')\n",
+    "    def load_template(self, path):\n",
+    "        with open(path, 'r') as f:\n",
+    "            self.template = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "\n",
+    "    def apply_template(self):\n",
+    "        self.f.patch.set_facecolor(self.template[\"background-color\"][\"figure-background\"])\n",
+    "        self.axs.set_facecolor(self.template[\"background-color\"][\"grid_background\"])\n",
     "\n",
     "    def save(self, name):\n",
     "        self.f.savefig(name)\n",
@@ -33,7 +39,7 @@
     "class Lines(Plot):\n",
     "    def __init__(self):\n",
     "        Plot.__init__(self)\n",
-    "    \n",
+    "\n",
     "    def plot(self, x: list, y: list, title=\"Some Title\",\n",
     "             xlabel=\"Some Label\", ylabel=\"Some Label\", labs=\"Some Label\"):\n",
     "\n",
@@ -50,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -72,16 +78,33 @@
     "\n",
     "lines = Lines()\n",
     "lines.plot(x=[x], y=[y])\n",
-    "lines.apply_layout()"
+    "lines.load_template(path=\"./template.yml\")\n",
+    "lines.apply_template()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#aea8d3'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lines.show()"
+    "import yaml\n",
+    "\n",
+    "with open(\"./template.yml\", 'r') as f:\n",
+    "    template = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "    \n",
+    "template[\"background-color\"][\"grid_background\"]"
    ]
   }
  ],
